--- a/css/estilos.css
+++ b/css/estilos.css
@@ -198,4 +198,169 @@
   height: 2rem;
   position: absolute;
 }
+
+/* HEADER */
+.header {
+  background-color: #0f0e0e;
+}
+
+.header .navbar-light .navbar-toggler {
+  color: white;
+  border-color: white;
+  background-color: #faf6f6;
+  padding: .3rem .8rem;
+  border-radius: .2rem;
+}
+
+.header .hamburguer {
+  color: #faf6f6;
+}
+
+/* QUIENES SOMOS */
+.wwa {
+  height: auto;
+  padding-bottom: 2rem;
+  background-color: #faf6f6;
+}
+
+.wwa .wwa__quienes-somos {
+  text-align: center;
+  padding: 1rem;
+}
+
+.wwa .wwa__quienes-somos .wwa__quienes-somos--titulo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1rem;
+}
+
+.wwa .wwa__ubicacion {
+  padding: 0 1rem;
+  height: auto;
+}
+
+.wwa .wwa__ubicacion .wwa__ubicacion--titulo {
+  text-align: center;
+  padding-bottom: 2rem;
+}
+
+.wwa .wwa__ubicacion .wwa__ubicacion--mapa {
+  height: 20rem;
+}
+
+.wwa .wwa__ubicacion .wwa__ubicacion--mapa iframe {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-box-shadow: 0.2rem 0.2rem 0.5rem 0.5rem rgba(59, 58, 58, 0.1);
+          box-shadow: 0.2rem 0.2rem 0.5rem 0.5rem rgba(59, 58, 58, 0.1);
+}
+
+.catalogo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-area: catalogo;
+  background-color: #faf6f6;
+}
+
+.catalogo h2 {
+  text-align: center;
+  margin: 5rem 0 0 0;
+}
+
+.catalogo__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.catalogo__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-width: 250px;
+  max-width: 300px;
+  height: auto;
+  margin: 3rem 6rem;
+  -webkit-box-shadow: 20px 20px 40px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 20px 20px 40px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  overflow: hidden;
+  cursor: default;
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+}
+
+.catalogo__card:hover {
+  -webkit-box-shadow: 20px 20px 40px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 20px 20px 40px 10px rgba(0, 0, 0, 0.4);
+  -webkit-transform: translateY(-3%);
+          transform: translateY(-3%);
+}
+
+.catalogo__card img {
+  width: 300px;
+  height: auto;
+}
+
+.card__contenido {
+  padding: 1rem;
+}
+
+.card__contenido h4 {
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+.card__contenido p {
+  color: #6a6a6a;
+  line-height: 1.5;
+}
+
+.catalogo__btn {
+  display: inline-block;
+  width: 10rem;
+  height: 3.5rem;
+  padding: 1rem 3rem;
+  background-color: #0f0e0e;
+  border-radius: 5px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0 0 4rem 0;
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+}
+
+.catalogo__btn:hover {
+  -webkit-transform: translateX(1%);
+          transform: translateX(1%);
+  cursor: pointer;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.catalogo__btn a {
+  color: #faf6f6;
+  text-decoration: none;
+}
 /*# sourceMappingURL=estilos.css.map */
