--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,5 +4,14 @@ $secondary: #faf6f6;
 $theme-colors: ("primary": $primary,
     "secondary": $secondary, );
 
-/* IMPORTS */    
+/* IMPORTS */
+
+
+
 @import "home";
+@import "quienes-somos";
+@import "catalogo"; 
+
+
+
+
