--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,9 +1,5 @@
-$primary: #0f0e0e;
-$secondary: #faf6f6;
 
-$theme-colors: ("primary": $primary,
-    "secondary": $secondary, );
-
+/* HOME */
 .navbar-toggler-icon {
     .navbar-toggler {
         color: #0f0e0e;
